# Breakout-clone

./: .gitignore  .gitmodules  CMakeLists.txt  Entity.h  LICENSE  Makefile  README.md
assets/gfx/: ballGrey_11x11.xcf  ballGrey_16x16.xcf  blue_16x16xcf.xcf  element_red_rectangle_glossy_32x16.xcf  elyellow_16x16.xcf  green_16x16.xcf  grey_16x16.xcf  grey_16x8.xcf  paddleRed.xcf  purple_16x16.xcf  red_16x16.xcf  tiles_16x16.xcf  tiles_32x16.xcf
doc/diagram/src/: breakout.puml
include/: olcPixelGameEngine.h
src/: Ball.cpp  Ball.h  BallGraphicsComponent.cpp  BallGraphicsComponent.h  BallInputComponent.cpp  BallInputComponent.h  BallPhysicsComponenet.cpp  BallPhysicsComponenet.h  Bat.cpp  Bat.h  BatGraphicsComponent.cpp  BatGraphicsComponent.h  BatInputComponent.cpp  BatInputComponent.h  BatPhysicsComonent.cpp  BatPhysicsComponent.h  Blocks.cpp  Blocks.h  BreakOut.cpp  BreakOut.h  Entity.h  GameObject.cpp  GameObject.h  GraphicsComponent.h  InputComponent.h  PhysicsComponent.h  TileMap.cpp  TileMap.h  World.cpp  World.h  main.cpp  olcPixelGameEngine.cpp
test/: tests-BreakOut.cpp
